--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -1,10 +1,23 @@
 @import "bourbon";
 
+.tooltip {
+	max-width: 600px !important;
+
+	.tooltip-inner {
+		max-width: 600px !important;
+	}
+}
+
+.tooltip-preview {
+	max-width: 500px;
+	opacity: 1;
+}
+
 .portlet-forms {
 	$side-spacing: 34px;
 
 	.aspect-ratio img {
-	    top: 0;
+		top: 0;
 	}
 
 	.form-builder-header-title {
@@ -12,8 +25,8 @@
 	}
 
 	.form-builder-tabview {
+		border: 1px solid #DEE4E9;
 		padding: 20px 70px 11px 34px;
-		border: 1px solid #dee4e9;
 		position: relative;
 	}
 
@@ -35,18 +48,18 @@
 	}
 
 	.ddl-form-builder-basic-info {
+		background-color: #869CAD;
 		height: 300px;
-		background-color: #869cad;
 
 		.ddl-form-builder-name,
 		.ddl-form-builder-description {
-			h1,h2,h3,h4,h5,h6,p {
+			h1, h2, h3, h4, h5, h6, p {
 				margin: 0;
 			}
 
 			.alloy-editor.alloy-editor-placeholder {
-				margin: 0;
 				color: white;
+				margin: 0;
 
 				&:empty:not(:focus) {
 					border-width: 0;
@@ -117,8 +130,8 @@
 		}
 
 		.form-builder-content {
-			background: #fff;
-			border: 1px solid #dce0e3;
+			background: #FFF;
+			border: 1px solid #DCE0E3;
 			border-radius: 1px;
 			box-shadow: 0 2px 4px rgba(188, 197, 204, 0.3);
 			margin: 0 auto;
@@ -290,16 +303,16 @@
 
 .form-builder-page-manager-popover-header  {
 	.popover-content {
-	 	padding: 7px 21px;
+		padding: 7px 21px;
 	}
 
 	ul {
-	 	margin: 0;
-	 	padding: 0;
+		margin: 0;
+		padding: 0;
 	}
 
 	li {
-	 	list-style-type: none;
+		list-style-type: none;
 		color: #869cad;
 		cursor: pointer;
 		font-size: 15px;
