--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -14,209 +14,106 @@
 }
 
 .portlet-forms {
-	$side-spacing: 34px;
-
-	.aspect-ratio img {
-		top: 0;
+	.ddl-form-name {
+		font-size: 32px;
+		line-height: 32px;
 	}
 
-	.form-builder-header-title {
-		display: none;
+	.ddl-form-description {
+		font-size: 14px;
+		line-height: 24px;
 	}
 
-	.form-builder-tabview {
-		border: 1px solid #DEE4E9;
-		padding: 20px 70px 11px 34px;
-		position: relative;
+	.form-builder-page-header-title,
+	.lfr-ddm-form-page-title {
+		font-size: 19px;
 	}
 
-	.form-builder-page-header {
-		position: relative;
+	.form-builder-page-header-description,
+	.lfr-ddm-form-page-description {
+		font-size: 14px;
 	}
+}
 
-	.form-builder-page-header,
-	.form-builder-tabview {
-		.form-builder-controls-trigger  {
-			position: absolute;
-			right: 20px;
-			top: 40px;
-		}
-	}
-
-	.form-builder-controls-trigger {
-		font-size: 20px;
-	}
-
-	.ddl-form-builder-basic-info {
+.portlet-forms-admin, .portal-popup {
+	.ddl-form-basic-info {
 		background-color: #869CAD;
-		height: 300px;
+		padding-bottom: 169px;
+		min-height: 300px;
 
-		.ddl-form-builder-name,
-		.ddl-form-builder-description {
-			h1, h2, h3, h4, h5, h6, p {
-				margin: 0;
-			}
+		h1, h2, h3, h4, h5, h6  {
+			margin: 0;
+		}
 
-			.alloy-editor.alloy-editor-placeholder {
-				color: white;
-				margin: 0;
-
-				&:empty:not(:focus) {
-					border-width: 0;
-				}
-			}
+		.alloy-editor.alloy-editor-placeholder:empty:not(:focus),
+		.ddl-form-name,
+		.ddl-form-description {
+			margin: 0;
+			color: white;
+			border: none;
 
 			.help-block {
 				position: absolute;
 				top: -15px;
 			}
+
+			p {
+				margin: 0;
+			}
 		}
 
-		.ddl-form-builder-name {
+		.ddl-form-name {
 			padding: 52px 0 0 0;
+			font-weight: 300;
 
-			.alloy-editor.alloy-editor-placeholder {
-				font-size: 32px;
-				font-weight: 300;
-				line-height: 32px;
+			p {
+				margin: 0;
 			}
 		}
 
-		.ddl-form-builder-description {
+		.ddl-form-description {
 			padding: 23px 0 0 0;
+			font-weight: 400;
 
-			.alloy-editor.alloy-editor-placeholder {
-				font-size: 14px;
-				font-weight: 400;
-				line-height: 24px;
+			p {
+				margin: 0;
 			}
 		}
+	}
 
+	.form-builder-page-header-title,
+	.form-builder-page-header-description,
+	.lfr-ddm-form-page-title,
+	.lfr-ddm-form-page-description {
+		color: #728694;
+		font-weight: 400;
+	}
+
+	.form-builder-page-header-title,
+	.lfr-ddm-form-page-title {
+		margin-top: 25px;
+	}
+
+	.form-builder-tabview,
+	.lfr-ddm-form-wizard {
+		padding: 20px 34px 11px 34px;
+		position: relative;
+		border-bottom: 1px solid #dee4e9;
 	}
 
 	.ddl-form-builder-app {
 		margin-top: -120px;
 
-		.form-builder-header {
-			display: none;
-		}
-
-		.form-builder-layout {
-			margin: 0 auto;
-			width: auto;
-
-			.layout-builder-add-row-area {
-				margin: 0;
-			}
-
-			.layout-row-container-row {
-				margin-bottom: 2px;
-
-				.layout-row {
-					border-width: 0;
-					margin: 0;
-
-					.col {
-						border-radius: 0;
-						border-width: 0;
-						min-height: 50px;
-
-						.form-group {
-							min-height: 40px;
-						}
-					}
-				}
-			}
-		}
-
-		.form-builder-content {
-			background: #FFF;
-			border: 1px solid #DCE0E3;
+		.form-builder-content,
+		.lfr-ddm-form-content {
+			background: #fff;
+			border: 1px solid #dce0e3;
 			border-radius: 1px;
 			box-shadow: 0 2px 4px rgba(188, 197, 204, 0.3);
 			margin: 0 auto;
 			width: auto;
-
-			.tab-pane {
-				min-height: auto;
-				padding-bottom: 0;
-			}
-
-			.form-builder-pages-header {
-				margin-bottom: 0;
-				width: auto;
-
-				input {
-					border-width: 0;
-
-					&.form-builder-page-header-description {
-						margin-bottom: 17px;
-						padding-top: 0;
-					}
-
-					&.form-builder-page-header-title {
-						margin: 19px 0 0 0;
-						padding-bottom: 0;
-					}
-
-					&:focus {
-						box-shadow: none;
-					}
-				}
-			}
-		}
-
-		.form-builder-pages {
-			li.active a {
-				z-index: 0;
-			}
 		}
 	}
-
-	.lfr-ddm-repeatable-add-button {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-
-	.lfr-ddm-repeatable-delete-button {
-		position: absolute;
-		right: 15px;
-		top: 0;
-	}
-
-	.liferay-ddm-form-renderer-wizard-navigation-allowed {
-		> li {
-			cursor: pointer;
-		}
-	}
-
-	/*
-	 * Probabily these rules must be in another file. Check it later.
-	 */
-
-	.form-builder-field {
-		border-radius: 0;
-		border-width: 0;
-		box-shadow: none;
-		margin: 0;
-		padding: 10px $side-spacing 10px $side-spacing;
-	}
-
-	.form-builder-field-list-add-button {
-		width: auto;
-		margin: 0 $side-spacing;
-		cursor: pointer;
-	}
-
-	.form-builder-field-list-add-button-label {
-		margin-bottom: 5px;
-		color: #4a90e2;
-	}
-
-	/*
-	 * Probabily these rules must be in another file. Check it later.
-	 */
 }
 
 .lfr-ddl-field-settings-modal.form-builder-field-settings {
@@ -297,6 +194,157 @@
 	}
 }
 
+.portlet-forms-admin {
+	$side-spacing: 34px;
+
+	.aspect-ratio img {
+		top: 0;
+	}
+
+	.form-builder-header-title {
+		display: none;
+	}
+
+	.form-builder-header {
+		display: none;
+	}
+
+	.form-builder-tabview {
+		padding-right: 70px;
+	}
+
+	.form-builder-page-header {
+		position: relative;
+	}
+
+	.form-builder-controls-trigger  {
+		$height: 48px;
+
+		font-size: 20px;
+		display: block;
+		padding: 8px;
+		position: absolute;
+		right: 20px;
+		height: $height;
+		top: 50%;
+		margin-top: - $height / 2;
+	}
+
+	.liferay-ddm-form-renderer-wizard-navigation-allowed {
+		> li {
+			cursor: pointer;
+		}
+	}
+
+	.form-builder-pages-header {
+		margin-top: 0;
+		width: auto;
+
+		input {
+			border-width: 0;
+
+			&.form-builder-page-header-description {
+				margin-bottom: 17px;
+				padding-top: 0;
+			}
+
+			&.form-builder-page-header-title {
+				padding-bottom: 0;
+				padding-top: 0;
+    			height: auto;
+			}
+
+			&:focus {
+				box-shadow: none;
+			}
+		}
+	}
+
+	.form-builder-layout {
+		margin: 0 auto;
+		width: auto;
+
+		.layout-builder-add-row-area {
+			margin: 0;
+		}
+
+		.layout-row-container-row {
+			margin-bottom: 2px;
+
+			.layout-row {
+				border-width: 0;
+
+				.col {
+					border-radius: 0;
+					border-width: 0;
+					min-height: 50px;
+
+					.form-group {
+						min-height: 40px;
+					}
+				}
+			}
+		}
+	}
+
+	.lfr-ddm-repeatable-add-button {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+
+	.lfr-ddm-repeatable-delete-button {
+		position: absolute;
+		right: 15px;
+		top: 0;
+	}
+
+	.form-builder-field {
+		border-radius: 0;
+		border-width: 0;
+		box-shadow: none;
+		margin: 0;
+		padding: 10px $side-spacing 10px $side-spacing;
+	}
+
+	.form-builder-field-list-add-button {
+		width: auto;
+		margin: 0 $side-spacing;
+		cursor: pointer;
+	}
+
+	.form-builder-field-list-add-button-label {
+		margin-bottom: 5px;
+		color: #4a90e2;
+	}
+
+	.form-builder-pages {
+		padding-bottom: 0;
+		li.active a {
+			z-index: 0;
+		}
+	}
+
+	.form-builder-content {
+		.layout-builder-layout-container {
+			margin-bottom: 0;
+		}
+	}
+
+	.form-builder-pages-lexicon {
+		position: relative;
+		text-align: center;
+
+		.form-builder-page-manager-content {
+			border-top: 1px solid #dce0e3;
+		}
+
+		.form-builder-pagination {
+			margin: 0;
+		}
+	}
+}
+
 .form-builder-page-manager-popover-header.popover.left > .arrow {
 	margin-left: 19px;
 }
@@ -321,3 +369,38 @@
 		padding: 11px 0 11px 0;
 	}
 }
+
+// .form-builder-pages {
+// 	.form-builder-page-manager-content {
+// 		padding: 7px 0px;
+// 		
+
+// 		.pagination {
+// 			.pagination-content {
+// 				li {
+// 					a {
+// 						border-radius: 5px;
+// 						padding: 7px 13px;
+// 					}
+// 				}
+
+// 				> li {
+// 					&.active,
+// 					&:hover {
+// 						a {
+// 							background-color: #e2e8ec;
+// 							color: inherit;
+// 						}
+// 					}
+
+// 					> a,
+// 					> span {
+// 						height: auto;
+// 						width: auto;
+// 						color: #869cad;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// }
