--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -155,10 +155,11 @@
 					}
 
 					.lfr-autorow-controls {
-						bottom: 13px;
+						bottom: 0;
+						right: 0;
 
 						.add-row {
-							margin-right: 5px;
+							margin-right: 3px;
 						}
 					}
 				}
@@ -386,4 +387,16 @@
 
 .management-bar a.active.btn span {
 	color: #65B6F0;
+}
+
+.auto-fields {
+	.lfr-form-row {
+		padding: 0;
+		
+		&:hover {
+			background-color: transparent;
+			border-color: transparent;
+			background: transparent;
+		}
+	}
 }
