--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -51,6 +51,17 @@
 	.lfr-ddm-form-page-description {
 		font-size: 14px;
 	}
+
+	.form-group {
+		margin: 0;
+
+		.input-group-container,
+		.radio-default,
+		.input-select-wrapper,
+		.checkbox {
+			margin-bottom: 50px;
+		}
+	}
 }
 
 .portlet-forms, .lfr-ddl-field-settings-modal {
@@ -291,6 +302,10 @@
 		top: 50%;
 	}
 
+	.form-builder-field-list-add-container {
+		margin-top: -36px;
+	}
+
 	.liferay-ddm-form-renderer-wizard-navigation-allowed {
 		> li {
 			cursor: pointer;
@@ -343,6 +358,18 @@
 					.form-group {
 						min-height: 40px;
 					}
+
+					&:first-of-type {
+						.layout-col-content {
+							padding-left: 21px;
+						}
+					}
+
+					&.last-col {
+						.layout-col-content {
+							padding-right: 21px;
+						}
+					}
 				}
 			}
 		}
@@ -365,13 +392,12 @@
 		border-width: 0;
 		box-shadow: none;
 		margin: 0;
-		padding: 10px $side-spacing 10px $side-spacing;
+		padding: 0;
 	}
 
 	.form-builder-field-list-add-button {
 		cursor: pointer;
-		margin: 0 $side-spacing;
-		width: auto;
+		width: 100%;
 	}
 
 	.form-builder-field-list-add-button-label {
