--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/META-INF/resources/css/main.scss
@@ -75,3 +75,13 @@
 		padding-bottom: $side-spacing;
 	}
 }
+
+.multi-step-progress-bar {
+	> .complete {
+		color: #65B6F0;
+		
+		.divider {
+			background-color: #65B6F0;
+		}
+	}
+}
