--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -38,7 +38,6 @@
 
 	.ddl-form-name {
 		font-size: 32px;
-		line-height: 32px;
 	}
 
 	.ddl-form-description {
@@ -105,9 +104,10 @@
 	}
 
 	.ddl-form-basic-info {
-		background-color: #869CAD;
+		background: url(https://www.liferay.com/documents/47511614/49230168/Squares-Heading.png/0453b861-d454-4dcd-b11d-fac7458e242c);
 		min-height: 300px;
 		padding-bottom: 169px;
+		box-shadow: inset 0 -21px 54px rgba(0,0,0,0.2);
 
 		h1, h2, h3, h4, h5, h6  {
 			margin: 0;
@@ -117,8 +117,10 @@
 		.ddl-form-name,
 		.ddl-form-description {
 			border-width: 0;
-			color: white;
 			margin: 0;
+			text-shadow: 0px 0px 18px #fff;
+			color: #1277a7;
+			font-weight: 500;
 
 			.help-block {
 				position: absolute;
@@ -131,8 +133,22 @@
 		}
 
 		.ddl-form-name {
-			font-weight: 300;
+			// color: rgb(45, 100, 145);
 			padding: 52px 0 0 0;
+			font-size: 71px;
+			font-weight: 400;
+			// text-shadow: 0 1px 0 rgba(255, 255, 255, .4),
+	  //          0 2px 0 #29343D,
+	  //          0 3px 0 #29343D,
+	  //          0 4px 0 #29343D,
+	  //          0 5px 0 #29343D,
+	  //          0 6px 1px rgba(255,255,255,.1),
+	  //          0 0 5px rgba(255,255,255,.1),
+	  //          0 1px 3px rgba(255,255,255,.3),
+	  //          0 3px 5px rgba(255,255,255,.2),
+	  //          0 5px 10px rgba(255,255,255,.25),
+	  //          0 10px 10px rgba(255,255,255,.2),
+	  //          0 20px 20px rgba(255,255,255,.15);
 
 			p {
 				margin: 0;
@@ -141,7 +157,8 @@
 
 		.ddl-form-description {
 			font-weight: 400;
-			padding: 23px 0 0 0;
+			padding: 0 0 0 5px;
+			font-size: 23px;
 
 			p {
 				margin: 0;
