--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -89,10 +89,6 @@
 }
 
 .portal-popup, .portlet-forms-admin {
-	.alert {
-		margin: 0;
-	}
-
 	.aspect-ratio-bg-center {
 		background-position: 0 0;
 		background-repeat: no-repeat;
@@ -104,10 +100,8 @@
 	}
 
 	.ddl-form-basic-info {
-		background: url(https://www.liferay.com/documents/47511614/49230168/Squares-Heading.png/0453b861-d454-4dcd-b11d-fac7458e242c);
 		min-height: 300px;
 		padding-bottom: 169px;
-		box-shadow: inset 0 -21px 54px rgba(0,0,0,0.2);
 
 		h1, h2, h3, h4, h5, h6  {
 			margin: 0;
@@ -118,8 +112,7 @@
 		.ddl-form-description {
 			border-width: 0;
 			margin: 0;
-			text-shadow: 0px 0px 18px #fff;
-			color: #1277a7;
+			color: white;
 			font-weight: 500;
 
 			.help-block {
@@ -133,22 +126,9 @@
 		}
 
 		.ddl-form-name {
-			// color: rgb(45, 100, 145);
 			padding: 52px 0 0 0;
-			font-size: 71px;
-			font-weight: 400;
-			// text-shadow: 0 1px 0 rgba(255, 255, 255, .4),
-	  //          0 2px 0 #29343D,
-	  //          0 3px 0 #29343D,
-	  //          0 4px 0 #29343D,
-	  //          0 5px 0 #29343D,
-	  //          0 6px 1px rgba(255,255,255,.1),
-	  //          0 0 5px rgba(255,255,255,.1),
-	  //          0 1px 3px rgba(255,255,255,.3),
-	  //          0 3px 5px rgba(255,255,255,.2),
-	  //          0 5px 10px rgba(255,255,255,.25),
-	  //          0 10px 10px rgba(255,255,255,.2),
-	  //          0 20px 20px rgba(255,255,255,.15);
+			font-size: 32px;
+			font-weight: 300;
 
 			p {
 				margin: 0;
@@ -157,8 +137,7 @@
 
 		.ddl-form-description {
 			font-weight: 400;
-			padding: 0 0 0 5px;
-			font-size: 23px;
+			padding: 0;
 
 			p {
 				margin: 0;
@@ -177,7 +156,7 @@
 	.form-builder-tabview,
 	.lfr-ddm-form-wizard {
 		border-bottom: 1px solid #DEE4E9;
-		padding: 20px 34px 11px 34px;
+		padding: 20px 34px 12px 34px;
 		position: relative;
 	}
 
@@ -288,6 +267,10 @@
 
 .portlet-forms-admin {
 	$side-spacing: 34px;
+
+	.ddl-form-basic-info {
+		background-color: #869CAD;
+	}
 
 	.aspect-ratio img {
 		top: 0;
